# rust-vmm

./: .gitmodules  Cargo.toml
miminal_app/: Cargo.toml  build.rs  build.rs.old  linker.ld  min_two.json  minimal_compile.json
miminal_app/.cargo/: config.toml
miminal_app/src/: gdt.rs  interrupts.S  interrupts_blank.S  linker.ld  main.rs  mmio.rs  outputter.rs  page_fault.S  print.rs  printing.rs  rng.rs  sleep.rs  start.S  start.s
miminal_app/src/cpu/: cpu_exceptions.rs  interrupts.rs  mod.rs
miminal_app/src/memory/: mod.rs
miminal_app/src/mmio/: mod.rs  virtio.rs
miminal_app/src/tests/: break_point.rs  invalid_memory.rs  mmio.rs  mod.rs  stack_overflow.rs
miminal_app/src/virtio/: mod.rs  virtqueue.rs
miminal_app/src/virtio_devices/: blk.rs
virtio/src/: driver.rs  dumb_alloc.rs  lib.rs  virtqueue.rs
virtio/src/devices/: blk.rs
vmm_rust/: Cargo.toml  build_minimal_app.sh  dump_obj_file.sh  miminal_app  out.S
vmm_rust/src/: kvm_regs.rs  libc_macros.rs  main.rs  mmio.rs  portio.rs  vm.rs
vmm_rust/src/drivers/: binary_write.rs  console.rs  mod.rs  rng.rs  sleep.rs  virtio.rs
vmm_rust/src/virtio/: virtqueue.rs
