[package]
name = "miminal_app"
version = "0.1.0"
edition = "2018"

# see more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = "fat"
opt-level = "s"
codegen-units = 1

[dependencies]
bootloader = "0.9.23"
# spin = "0.9.8"
# x86 = "0.52.0"

# [dependencies.lazy_static]
# version = "1.0"
# features = ["spin_no_std"]
