[package]
name = "miminal_app"
version = "0.1.0"
edition = "2018"

# see more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = "fat"
opt-level = 3
codegen-units = 1
panic = "abort" # disable stack unwinding on panic
debug = true

[dependencies]
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
x86_64 = "0.14.11"
spin = "0.9.8"
volatile = "0.2.6"
pic8259 = "0.10.1"
virtio = { path = '../virtio' }

[profile.dev]
panic = "abort" # disable stack unwinding on panic
