[package]
name = "vmm_rust"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "0.6.8"
kvm-bindings = "0.6.0"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
libc = "0.2.149"
vmm-sys-util = "0.11.2"
x86_64 = "0.14.11"
